fix en index.jade

--- a/views/index.jade
+++ b/views/index.jade
@@ -38,13 +38,13 @@ block content
             div.animated.rotateInDownLeft
               div.service-box
                 div.service-icon
-                  div.fa.fa-laptop.fa-2x
+                  span.fa.fa-laptop.fa-2x
                 div.service-desc
                   h5 Web Design
                   div.divider-header
-                    p
-                      | Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem duo.
-                      a(href="#").btn.btn-skin Learn more
+                  p
+                    | Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem duo.
+                  a(href="#").btn.btn-skin Learn more
           div.col-xs-6.col-sm-4.col-md-4
             div.animated.rotateInDownLeft.slow
               div.service-box
