--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ block content
           .animatedParent
             .section-heading.text-center.animated.bounceInDown
               h2.h-bold
-                | About our bocor team
+                | Acerca de nuestro equipo
               div.divider-header
 
     .container
@@ -28,7 +28,7 @@ block content
       .row
         col-lg-8.col-lg-offset-2
           .section-heading.text-center
-            h2.h-bold What we can do for you
+            h2.h-bold Todo lo que podemos hacer por ti
             div.divider-header
 
     div.text-center
@@ -44,7 +44,7 @@ block content
                   div.divider-header
                   p
                     | Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem duo.
-                  a(href="#").btn.btn-skin Learn more
+                  a(href="#").btn.btn-skin Aprender mas...
           div.col-xs-6.col-sm-4.col-md-4
             div.animated.rotateInDownLeft.slow
               div.service-box
@@ -74,7 +74,7 @@ block content
           div.col-lg-8.col-lg-offset-2
             div.animatedParent
               div.section-heading.text-center
-                h2.h-bold.animated.bounceInDown What we have done
+                h2.h-bold.animated.bounceInDown Que es lo que tenemos hecho
                   div.divider-header
       div.container
         div.row.animatedParent
