--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -2,7 +2,7 @@ extends layoutMaster
 
 block content
 
-  section(id="service").home-section.color-dark.bg-gray
+  section(id="dashboard").dashboard-section.color-dark.bg-gray
     .row
       div.text-center
         .container
@@ -11,9 +11,9 @@ block content
               div.animated.rotateInDownLeft
                 div.service-box
                   div.service-icon
-                    span.fa.fa-laptop.fa-2x
+                    span.icon-laboratory
                   div.service-desc
-                    h5 Web Design
+                    h5 Laboratorio
                     div.divider-header
                     p
                       | Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem duo.
@@ -22,9 +22,9 @@ block content
               div.animated.rotateInDownLeft.slow
                 div.service-box
                   div.service-icon
-                    span.fa.fa-camera.fa-2x
+                    span.icon-dental
                   div.service-desc
-                    h5 Photography
+                    h5 Odontologia
                     div.divider-header
                     p
                       | Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem duo.
@@ -33,13 +33,18 @@ block content
               div.animated.rotateInDownLeft.slower
                 div.service-box
                   div.service-icon
-                    span.fa.fa-code.fa-2x
+                    span.icon-neurology
                   div.service-desc
-                    h5 Graphic design
+                    h5 Neurologia
                     div.divider-header
                     p
                       | Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem duo.
                     a(href="#").btn.btn-skin Ir
+    .row
+      .text-center
+        .container
+          div.col-xs-12
+            &nbsp;
     .row
       div.text-center
         .container
@@ -48,9 +53,9 @@ block content
               div.animated.rotateInDownLeft
                 div.service-box
                   div.service-icon
-                    span.fa.fa-laptop.fa-2x
+                    span.icon-labor-delivery
                   div.service-desc
-                    h5 Web Design
+                    h5 Labor de parto
                     div.divider-header
                     p
                       | Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem duo.
@@ -59,9 +64,9 @@ block content
               div.animated.rotateInDownLeft.slow
                 div.service-box
                   div.service-icon
-                    span.fa.fa-camera.fa-2x
+                    span.icon-pediatrics
                   div.service-desc
-                    h5 Photography
+                    h5 Pediatria
                     div.divider-header
                     p
                       | Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem duo.
@@ -70,9 +75,9 @@ block content
               div.animated.rotateInDownLeft.slower
                 div.service-box
                   div.service-icon
-                    span.fa.fa-code.fa-2x
+                    span.icon-womens-health
                   div.service-desc
-                    h5 Graphic design
+                    h5 Salud de la mujer
                     div.divider-header
                     p
                       | Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem duo.
