--- a/views/layoutMaster.jade
+++ b/views/layoutMaster.jade
@@ -7,8 +7,8 @@ html
     link(rel="stylesheet" href="../color/default.css")
     link(rel="stylesheet" href="../css/animations.css")
     link(rel="stylesheet" href="../font-awesome/css/font-awesome.min.css")
-    link(rel="stylesheet" href="../css/nivo-lightbox.css")
-    link(rel="stylesheet" href="../css/nivo-lightbox-theme/default/default.css")
+
+    link(rel="stylesheet" href="../css/wfmi-style.css")
 
 
   body
@@ -34,7 +34,7 @@ html
                   li
                     a(href="#works") Herramientas
                   li
-                    a(href="./contact.html") Logout
+                    a(href="/logout") Logout
 
     block content
 
