--- a/views/login.jade
+++ b/views/login.jade
@@ -45,4 +45,4 @@ html
                     | Login
         .row
           .col-lg-8.col-lg-offset-2
-            div= error
+            div(role="alert").alert.alert-danger.alert-dismissible= error
