se quitaron imagenes q no se ocupaban

--- a/views/index.jade
+++ b/views/index.jade
@@ -81,14 +81,14 @@ block content
           div.col-sm-12.col-md-12.col-lg-12
             div.row.gallery-item
               div.col-md-3.animated.fadeInUp
-                a(href="images/works/1.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="images/works/1@2x.jpg")
+                a(href="images/works/1.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="images/works/1.jpg")
                   img(src="images/works/1.jpg" alt="img").img-responsive
               div.col-md-3.animated.fadeInUp.slow
-                a(href="images/works/2.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="images/works/1@2x.jpg")
+                a(href="images/works/2.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="images/works/2.jpg")
                   img(src="images/works/2.jpg" alt="img").img-responsive
               div.col-md-3.animated.fadeInUp.slower
-                a(href="images/works/3.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="images/works/1@2x.jpg")
+                a(href="images/works/3.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="images/works/3.jpg")
                   img(src="images/works/3.jpg" alt="img").img-responsive
               div.col-md-3.animated.fadeInUp
-                a(href="images/works/4.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg")
+                a(href="images/works/4.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="images/works/4.jpg")
                   img(src="images/works/4.jpg" alt="img").img-responsive
