--- a/views/layout.jade
+++ b/views/layout.jade
@@ -49,7 +49,7 @@ html
                   li
                     a(href="#works") Trabajos
                   li
-                    a(href="./contact.html") Contacto
+                    a(href="#contact") Contacto
                   li
                     a(href="./login") Login
     block content
