Manejo de session mejorada

--- a/views/layoutMaster.jade
+++ b/views/layoutMaster.jade
@@ -28,7 +28,7 @@ html
                   li.active
                     a(href="#intro") Home
                   li
-                    a(href="./usuarios.html") Usuarios
+                    a(href="/users") Usuarios
                   li
                     a(href="#service") Catalogos
                   li
