Admin usuarios solo front, faltan estilos

--- a/views/layoutMaster.jade
+++ b/views/layoutMaster.jade
@@ -18,7 +18,7 @@ html
           .row
             div.col-md-2
               div.site-logo
-                a(href="./").brand Healt Center
+                a(href="/dashboard").brand Healt Center
             div.col-md-10
               div.navbar-header
                 button(type="button" data-toggle="collapse" data-target="#menu").navbar-toggle
@@ -26,8 +26,6 @@ html
               div(id="menu").collapse.navbar-collapse
                 ul.nav.navbar-nav.navbar-right
                   li.active
-                    a(href="#intro") Home
-                  li
                     a(href="/users") Usuarios
                   li
                     a(href="#service") Catalogos
