--- a/views/layoutAdmin.jade
+++ b/views/layoutAdmin.jade
@@ -2,129 +2,133 @@ doctype html
 html
   head
     title= title
-    link(rel="stylesheet" href="../css/bootstrap.min.css")
-    link(rel="stylesheet" href="../css/admin.css")
+    link(rel="stylesheet", href="../css/bootstrap.min.css")
+
+    link(href="../fonts/css/font-awesome.min.css", rel="stylesheet")
+    link(href="../css/animate.min.css", rel="stylesheet")
+
+    link(href="../css/custom2.css", rel="stylesheet")
+    link(href="../css/icheck/flat/green.css", rel="stylesheet")
+
+    link(href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css", rel="stylesheet")
+    link(href="../css/editor/external/google-code-prettify/prettify.css", rel="stylesheet")
+    link(href="../css/editor/index.css", rel="stylesheet")
+
+    link(href="../css/select/select2.min.css" rel="stylesheet")
+
+    link(rel="stylesheet" href="../css/switchery/switchery.min.css")
+
+    script(src="../js/jquery.min.js")
 
 
 
-  body
+    script(src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js")
+    script(src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js")
+  body.nav-md
+    .container.body
+      .main_container
+        .col-md-3.left_col
+          .left_col.scroll-view
+            div(style="border: 0;").navbar.nav_title
+              a(href="index.html").site_title
+                i.fa.fa-paw
+                span Healt Center
+            .clearfix
 
+            .profile
+              .profile_pic: img(src="../images/img.jpg", alt="...").img-circle.profile_img
+              .profile_info
+                span Welcome,
+                h2=userName
+            br/
 
-
-nav.navbar.navbar-default.navbar-static-top
-  .container-fluid
-    .navbar-header
-      button(type="button").navbar-toggle.navbar-toggle-sidebar.collapsed
-        | MENU
-      button(type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1").navbar-toggle.collapsed
-        span.sr-only
-          | Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a(href="#").navbar-brand
-        | Administrator
-
-    div(id="bs-example-navbar-collapse-1").collapse.navbar-collapse
-      form(method="GET" role="search").navbar-form.navbar-left
-        .form-group
-          input(type="text" name="q" placeholder="Search").form-control
-        button(type="submit").btn.btn-default
-          i.glyphicon.glyphicon-search
-
-      ul.nav.navbar-nav.navbar-right
-        li
-          a(href="http://www.pingpong-labs.com" target="_blank") Visit Site
-        li.dropdown
-          a(href="#" data-toggle="dropdown" role="button" aria-expanded="false").dropdown-toggle
-            | Account
-            span.caret
-            ul(role="menu").dropdown-menu
-              li.dropdown-header SETTINGS
-              li
-                a(href="#") Other Link
-              li
-                a(href="#") Other Link
-              li
-                a(href="#") Other Link
-              li.divider
-              li
-                a(href="#") Logout
-
-div.container-fluid.main-container
-  div.col-md-2.sidebar
-    .row
-      .absolute-wrapper
-
-
-      .side-menu
-        nav(role="navigation").navbar.navbar-default
-          side-menu-container
-            ul.nav.navbar-nav
-              li.active
-                a(href="#")
-                  span.glyphicon.glyphicon-dashboard
-                  | Dashboard
-              li
-                a(href="#")
-                  span.glyphicon.glyphicon-plane
-                  | Active Link
-              li
-                a(href="#")
-                  span.glyphicon.glyphicon-cloud
-                  | Link
-
-              li(id="dropdown").panel.panel-default
-                a(data-toggle="collapse" href="#dropdown-lvl1" aria-expanded="true")
-                  span.glyphicon.glyphicon-user
-                  | Sub Level
-                  span.caret
-
-                div(id="dropdown-lvl1" aria-expanded="true").panel-collapse.collapse.in
-                  .panel-body
-                    ul.nav.navbar-nav
+            div(id="sidebar-menu").main_menu_side.hidden-print.main_menu
+              .menu_section
+                h3 General
+                ul.nav.side-menu
+                  li
+                    a
+                      i.fa.fa-home
+                        | Home
+                      span.fa.fa-chevron-down
+                    ul(style="display: none").nav.child_menu
                       li
-                        a(href="#") Link
+                        a(href="index.html") Dashboard
                       li
-                        a(href="#") Link
+                        a(href="index2.html") Dashboard2
                       li
-                        a(href="#") Link
+                        a(href="index3.html") Dashboard3
+                  li
+                    a
+                      i.fa.fa-edit
+                        | Forms
+                      span.fa.fa-chevron-down
+                    ul(style="display: none").nav.child_menu
+                      li
+                        a(href="form.html") General Form
+                      li
+                        a(href="form_advanced.html") Advanced Components
+                      li
+                        a(href="form_validation.html") Form Validation
+                      li
+                        a(href="form_wizards.html") Form Wizard
+                      li
+                        a(href="form_upload.html") Form Upload
+                      li
+                        a(href="form_buttons.html") Form Buttons
 
-                      li(id="dropdown").panel.panel-default
-                        a(data-toggle="collapse" href="#dropdown-lvl2")
-                          span.glyphicon.glyphicon-off
-                          | Sub Level
-                          span.caret
-                        div(id="dropdown-lvl2").panel-collapse.collapse
-                          .panel-body
-                            ul.nav.navbar-nav
-                              li
-                                a(href="#") Link
-                              li
-                                a(href="#") Link
-                              li
-                                a(href="#") Link
+            .sidebar-footer.hidden-small
+              a(data-toggle="tooltip", data-placement="top", title="Settings")
+                span(aria-hidden="true").glyphicon.glyphicon-cog
+              a(data-toggle="tooltip" data-placement="top" title="FullScreen")
+                span(aria-hidden="true").glyphicon.glyphicon-fullscreen
+              a(data-toggle="tooltip" data-placement="top" title="Lock")
+                span(aria-hidden="true").glyphicon.glyphicon-eye-close
+              a(data-toggle="tooltip" data-placement="top" title="Logout")
+                span(aria-hidden="true").glyphicon.glyphicon-off
 
-              li
-                a(href="#")
-                  span.glyphicon.glyphicon-signal
-                  | Link
+        .top_nav
+          .nav_menu
+            nav(role="navigation")
+              .nav.toggle
+                a(id="menu_toggle")
+                  i.fa.fa-bars
+              ul.nav.navbar-nav.navbar-right
+                li
+                  a(href="javascript:;", data-toggle="dropdown", aria-expanded="false").user-profile.dropdown-toggle
+                    img(src="../images/img.jpg" alt="user")
+                    span= userName
+                    span.fa.fa-angle-down
+                  ul.dropdown-menu.dropdown-usermenu.animated.fadeInDown.pull-right
+                    li
+                      a(href="#") Profile
+                    li
+                      a(href="#")
+                        span.badge.bg-red.pull-right 50%
+                        span Settings
+                    li
+                      a(href="#") Help
+                    li
+                      a(href="/logout")
+                        i.fa.fa-sign-out.pull-right
+                          | Log Out
+
+        div(role="main").right_col
+          div
+            block content
 
 
-  .content.col-md-10
-    .panel.panel-default
-      .panel-heading
-        | Dashboard
-        .panel-body
-          block content
+            br/
+            br/
+            br/
+            br/
 
-footer.pull-left.footer
-  p.col-md-12
-    hr.divider
-    Copyright &COPY; 2015
-    a(href="http://www.pingpong-labs.com")
-      | Gravitano
-
-
-script(type="text/javascript", src="../js/jquery-2.1.4.min.js")
-script(type="text/javascript", src="../js/dropdown.js")
+          footer
+            div
+              p.pull-right
+                | Gentelella Alela! a Bootstrap 3 template by
+                a(href="#") Kimlabs. |
+                span.lead
+                  i.fa.fa-paw
+                    | Gentelella Alela!
+            .clearfix
